k8s/infra/mongodb/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mongodb
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: service-notify
      ports:
        - protocol: TCP
          port: 27017
